new function GetRCConfiguration
