# openapi/index.yaml
@@ -1410,6 +1410,12 @@ definitions:
       summary:
         type: string
         minLength: 1
+      configuration_id:
+        type: string
+        description: Ulid string.
+        format: Ulid
+        x-import: '@pagopa/ts-commons/lib/strings'
+        example: 01ARZ3NDEKTSV4RRFFQ69G5FAV
     required:
       - id
   ReminderStatus:
